[gd_scene load_steps=13 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/JumpPad06.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad05.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad03.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad01.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad04.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad02.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPad0Interpolate.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Scenes/JumpPad.gd" type="Script" id=9]
[ext_resource path="res://RainIsoMainContents/Music/SpringSFX.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "JumpPad"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.1, 1.3, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 2.07053, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JumpPad/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 0, -8 ), Vector2( 0, -4 ), Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "JumpPadBack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JumpPad/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 16 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 20 )

[node name="JumpPad" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/JumpPad = SubResource( 1 )
anims/JumpPadBack = SubResource( 3 )

[node name="JumpPadTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="JumpPad" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpPad"]
position = Vector2( 0, 20 )
shape = SubResource( 2 )

[node name="SpringSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[connection signal="timeout" from="JumpPadTimer" to="." method="_on_JumpPadTimer_timeout"]
[connection signal="body_entered" from="JumpPad" to="." method="_on_JumpPad_body_entered"]
